--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Node.js
-node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -7,9 +6,6 @@ yarn-error.log*
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Dependency directories
 node_modules/
@@ -29,3 +25,10 @@ build/
 .env.test.local
 .env.production.local
 .env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
